# fileTransfer

./: CMakeLists.txt  README.md
include/: client.h  net_common.h  parse_arguments.h  server.h
src/: Client_main.cpp  Server_main.cpp  client.cpp  parse_arguments.cpp  server.cpp
